--- a/index.html
+++ b/index.html
@@ -58,6 +58,77 @@
                 </div>
             </div>
         </section>
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skills">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanila javaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skills">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>   
+        </section>
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title"></h3>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                    <div class="experience">
+                        <h4 class="experience-title"></h4>
+                        <h5 class="experience-sub-title"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
